# pyiceberg-procedure

./: AGENTS.md  CHANGELOG.md  README.md  example.py  pyproject.toml
src/pyiceberg_maintenance/: __init__.py  procedure_builder.py
tests/: test_sql_builder.py
