[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiceberg-maintenance"
version = "0.1.0"
description = "Utilities for generating Apache Iceberg maintenance CALL statements from Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["iceberg", "spark", "sql", "delta", "maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = []

[project.urls]
"Source Code" = "https://github.com/your-org/pyiceberg-maintenance"
"Bug Tracker" = "https://github.com/your-org/pyiceberg-maintenance/issues"

# ---------------------------------------------------------------------------
# Dev dependencies (PEP 735 — used by `uv sync --group dev`)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

# ---------------------------------------------------------------------------
# Source layout (hatchling)
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/pyiceberg_maintenance"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "CHANGELOG.md"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
